@startuml
'https://plantuml.com/class-diagram

package entities {
    class Person {
        - id : Long
        - e-mail : String
        - firstName : String
        - lastName : String
        - password : String

        + addPhone(phone : Phone)
    }

    class Hobby {
        - id : Long
        - name : String
        - wikiLink : String
        - category : String
        - type : String
    }

    class Address {
        - id : Long
        - street : String
        - additionalInfo : String
    }

    class Phone {
        - id : Long
        - number : String
    }

    class CityInfo {
        - id : Long
        - zipCode : String
        - city : String
    }
}

package dtos {
    class AddressDTO {
        - street : String
        - additionalInfo : String
    }
    class CityInfoDTO {
        - nr : String
        - navn : String
    }
    class HobbyDTO {
        - id : Long
        - hobby_name : String
        - hobby_wikiLink : String
        - hobby_category : String
        - hobby_type : String

        + getDtos(hobbies : List<Hobby>) : List<HobbyDTO>
    }
    class PersonDTO {
        - id : Long
        - email : String
        - firstName : String
        - lastName : String
        - cityInfo_id : Long
        - hobby_id : Set<Long>

        + getDtos(persons : List<Person>) : List<PersonDTO>
        + getEntity() : Person
    }
    class PhoneDTO {
        - id : Long
        - number : String

        + getDtos(phones : List<Phone>) : List<PhoneDTO>
    }

    AddressDTO "*" o-- "1" CityInfoDTO
    PersonDTO "*" o-- "1" AddressDTO
    PersonDTO "*" o-- "*" HobbyDTO
    PersonDTO "1" *-- "*" PhoneDTO
}

package Facades {
    class PersonFacade {
        - instance : PersonFacade
        - emf : EntityManagerFactory

        + getEntityManager() : EntityManager
        + assignCityInfo(cityInfoId : long, person_id : long) : Person
        + assignHobby(hobbyId : long, person_id : long) : Person
        + create(personDTO : PersonDTO) : PersonDTO
        + createHobby(hobbyDTO : HobbyDTO) : HobbyDTO
        + update(person : PersonDTO) : PersonDTO
        + delete(id : int) : PersonDTO
        + getPhoneObject(phoneNumber : String) : Phone
        + getByPhone(phoneNumber : String) : List<PersonDTO>
        + getByHobby(hobby : String) : List<PersonDTO>
        + getAllInCity(city : String) : List<PersonDTO>
        + getAllByHobbyCity(city : String, hobby : String) : List<PersonDTO>
        + getAllZips() : List<CityInfoDTO>
        + getRenameMeCount() : long
        + getAll() : List<PersonDTO>
        + insertHobby(hobbyDTO : HobbyDTO) : HobbyDTO
        + getHobbies(hobby_id : long) : HobbyDTO
        + insertCityInfo(cityInfoDTO : CityInfoDTO) : CityInfoDTO
        + getCityInfo(cityInfo_id : long) : List<CityInfoDTO>
    }
}

Person "*" o-- "*" Hobby
Person "*" o-- "1" Address
Person "1" *-- "*" Phone
Address "*" o-- "1" CityInfo

PersonFacade -- entities
PersonFacade -- PersonDTO

@enduml